# biography-desktop

./: .env.experimental  .gitignore  AGENTS.md  LICENSE  README.md  STATUS.md  TASKS.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  cloud-smoke.yml  release.yml
docs/: BIOGRAPHY_IMPROVEMENT_PLAN.md  BUILD.md  DESIGN.md  DEV_GUIDE.md  PHASE9_LOCAL_MODEL.md  RELEASE_CHECKLIST.md
public/systems/: experience_system.md  gacha_system.md  quest_system.md
public/worlds/: wuxia_jianghu.md
scripts/: cloud-smoke.mjs  migrate_from_python.py  release-metadata.sh  release-metadata.test.sh  verify-build-configs.mjs  verify-icons.sh  verify-stable-bundle.mjs
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.experimental.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  data.rs  db.rs  key_scope.rs  llm.rs  mod.rs  model.rs  prompts.rs  startup.rs  world.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/model/: binary.rs  download.rs  mod.rs  process.rs  types.rs
src/game/: engine.integration.test.ts  engine.ts
src/i18n/: index.ts
src/infrastructure/: contracts.ts  defaults.test.ts  defaults.ts  desktopDataGateway.ts  tauriLlmGateway.test.ts  tauriLlmGateway.ts
src/services/: biographyExport.test.ts  biographyExport.ts  config.test.ts  config.ts  contextBudget.test.ts  contextBudget.ts  databaseRestore.test.ts  databaseRestore.ts  llm.ts  (+25 more)
(+94 files in other folders)
