[package]
name = "biography-desktop"
version = "0.1.0"
description = "LLM-driven interactive biographical narrative desktop app"
authors = []
edition = "2021"

[lib]
name = "biography_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }
keyring = "2"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
zip = "0.6"
thiserror = "1"
flate2 = "1"
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
sha2 = "0.10"
futures = "0.3"
fs2 = "0.4"
libc = "0.2"
